# CryptoBacktest

./: CMakeLists.txt  README.md
ExampleStrategy/: StrategyIndicator.cpp  StrategyIndicator.h  StrategyUtils.cpp  StrategyUtils.h  config.cpp  config.h  sample_data.txt
ExampleStrategy/benchmark_strategy/: main.cpp
ExampleStrategy/filter_volume_strategy/: main.cpp
ExampleStrategy/floating_spread_strategy/: main.cpp
ExampleStrategy/vpin_spread_strategy/: CMakeLists.txt  main.cpp
include/: BacktestConfig.h  BacktestEngine.h  Data.h  Enum.h  Indicator.h  JsonDocument.h  JsonWrapper.h  Log.h  MatchEngine.h  Order.h  Portfolio.h  utils.h
python/: read_portfolio.py
src/: BacktestConfig.cpp  BacktestEngine.cpp  Enum.cpp  Indicator.cpp  JsonDocument.cpp  JsonWrapper.cpp  Log.cpp  MatchEngine.cpp  Order.cpp  Portfolio.cpp  utils.cpp
